<resources>
    <string name="app_name">Control De Gastos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="tu_app_para_gestionar_tus_gastos">Tu app para gestionar tus gastos</string>
    <string name="log_in">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="repita_contraseña">Repita contraseña</string>
    <string name="home">Home</string>
    <string name="hola">Bienvenido!!</string>
    <string name="nombre_perfil">Edwin</string>
    <string name="gestion_de_datos">Gestion de datos</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="gastos_totales">Gastos totales</string>
    <string name="dinero_total">$ 30\'000.000</string>
    <string name="agregar_gasto">Agregar gasto</string>
    <string name="categoria">Categorias</string>
    <string name="gastos_recientes">Gastos recientes</string>
    <string name="cuenta">Cuenta</string>
    <string name="gasto">$0.00</string>
    <string name="lista_gastos">Lista de gastos</string>
    <string name="categorias">Categorias</string>
    <string name="fecha">Fecha</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="guardar">Guardar</string>
    <string name="button_color_alimentacion">Button</string>
    <string name="fecha_gasto">Fecha del gasto</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="alimentacion">Alimentacion</string>
    <string name="producto">Producto</string>
    <string name="cuidado_personal">Cuidado personal</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="indumentaria">Indumentaria</string>
    <string name="otros">Otros</string>
    <string name="elige">Elige</string>
    <string name="categoria_">Categoria</string>
    <string name="lugar">Establecimiento</string>
    <string name="eliminar">Eliminar</string>

    <string-array name="lista_categorias">
        <item>Alimentación</item>
        <item>Indumentaria</item>
        <item>Entretenimiento</item>
        <item>Cuidado personal</item>
        <item>Otros</item>
    </string-array>

</resources>