<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_home_icon_foreground"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categoria"
        android:icon="@mipmap/ic_categoria_icon_foreground"
        android:title="@string/categoria" />

    <item
        android:id="@+id/navigation_gastosrecientes"
        android:icon="@mipmap/ic_gastos_icon_foreground"
        android:title="@string/gastos_recientes" />
    <item
        android:id="@+id/navigation_estadisticas"
        android:icon="@mipmap/ic_estadisticas_icon_foreground"
        android:title="@string/estadisticas" />
    <item
        android:id="@+id/navigation_cuenta"
        android:icon="@mipmap/ic_perfil_icon_foreground"
        android:title="@string/cuenta" />

</menu>