<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.sebastianb.myapplication.ui.list.ListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sebastianb.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sebastianb.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.sebastianb.myapplication.ui.login.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login"
        >
        <action
            android:id="@+id/action_navigation_login_to_navigation_singup"
            app:destination="@id/navigation_singup" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>
    <fragment
        android:id="@+id/navigation_singup"
        android:name="com.sebastianb.myapplication.ui.signup.SignUpFragment"
        android:label="SignUpFragment"
        tools:layout="@layout/fragment_sign_up"
        >
        <action
            android:id="@+id/action_navigation_singup_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
</navigation>