<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categoria.CategoriaFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/elige"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/categoria_"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="57dp"
        android:text="@string/alimentacion"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="57dp"
        android:text="@string/indumentaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="57dp"
        android:text="@string/cuidado_personal"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="57dp"
        android:text="@string/entretenimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="57dp"
        android:text="@string/otros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/alimentacion_button"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="240dp"
        android:contentDescription="@null"
        android:src="@mipmap/ic_alimentacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/indumentaria_button"
        android:layout_width="115dp"
        android:layout_height="116dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="36dp"
        android:src="@mipmap/ic_indumentaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/alimentacion_button"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@null" />

    <ImageButton
        android:id="@+id/cuidadopersonal_button"
        android:layout_width="115dp"
        android:layout_height="116dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="240dp"
        android:src="@mipmap/ic_cuidado_personal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@null" />

    <ImageButton
        android:id="@+id/entretenimiento_button"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="36dp"
        android:src="@mipmap/ic_entretenimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cuidadopersonal_button"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@null" />

    <ImageButton
        android:id="@+id/otros_button"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="148dp"
        android:contentDescription="@null"
        android:src="@mipmap/ic_otros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>