<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/hola"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="347dp"
        android:fontFamily="sans-serif-thin"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/gastos_recientes_button"
        android:layout_width="156dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:text="@string/gastos_recientes"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/estadisticas_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/estadisticas_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="15dp"
        android:text="@string/estadisticas"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gastos_recientes_button"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="210dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/gastos_totales"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gastos_recientes_button" />

    <TextView
        android:id="@+id/textViewgastostotales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/agregar_gastos_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="126dp"
        android:text="@string/agregar_gasto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewgastostotales" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="249dp"
        android:layout_height="213dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="13dp"
        android:src="@mipmap/ic_gastosrec_foreground"
        app:layout_constraintEnd_toStartOf="@+id/estadisticas_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="167dp"
        android:layout_height="183dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="272dp"
        android:src="@mipmap/ic_estadisticash_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="210dp"
        android:layout_height="185dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="94dp"
        android:src="@mipmap/ic_anadirh_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>